<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".constraint.motion.MotionLayoutActivity"
    android:orientation="vertical"
    >

    <Button
        android:id="@+id/btnBasic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/basic"
        />

    <Button
        android:id="@+id/btnBasic2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/basic_2"
        />

    <Button
        android:id="@+id/btnImageSaturation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/image_saturation"
        />

    <Button
        android:id="@+id/btnKeyFrameSet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/key_frame_set"
        />

    <Button
        android:id="@+id/btnCoordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/coordinator_layout"
        />

    <Button
        android:id="@+id/btnCoordinatorLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/coordinator_layout_2"
        />

    <Button
        android:id="@+id/btnParallax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/parallax"
        />

    <Button
        android:id="@+id/btnViewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_pager"/>

</LinearLayout>