<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/key_trigger_motion_scene"
    tools:context=".constraint.motion.MotionKeyTriggerActivity">
    
    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/motionLayout"
        app:layoutDescription="@xml/key_trigger_child_motion_scene"
        android:background="#1e376b"
        >
        
        <com.example.admin.animations.custom.BoundsImageView
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:scaleType="centerCrop"
            android:src="@drawable/cake"
            />

        <TextView
            android:id="@+id/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:transformPivotX="0dp"
            android:transformPivotY="0dp"
            android:text="@string/sanket"
            android:textColor="#FFF"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/sublabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vetkoli"
            android:textColor="#FFF"
            android:textSize="24sp"
            app:fontFamily="cursive" />
        
    </androidx.constraintlayout.motion.widget.MotionLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_motion_key_trigger">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/large_text" />

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:srcCompat="@drawable/ic_add_a_photo_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.motion.widget.MotionLayout>